[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspaces = { git = "https://github.com/near/workspaces-rs.git",  branch= "main" }
workspaces = { path = "../../../workspaces-rs/workspaces" }
anyhow = "1.0"
tokio = { version = "1.10.0", features = ["full"] }
serde_json = "1.0"
